@startuml

title __OPTIONALVALUES's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.Author {
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.Book {
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.BookController {
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      interface com.snowlinesoftware.blog.optionalvalues.BookRepository {
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.BookService {
      }
    }
  }
  

  namespace  {
    namespace om.snowlinesoftware.blog.optionalvalues {
      class com.snowlinesoftware.blog.optionalvalues.OptionalvaluesApplication {
      }
    }
  }
  

  com.snowlinesoftware.blog.optionalvalues.Book o-- com.snowlinesoftware.blog.optionalvalues.Author : author
  com.snowlinesoftware.blog.optionalvalues.BookController o-- com.snowlinesoftware.blog.optionalvalues.BookService : bookService
  com.snowlinesoftware.blog.optionalvalues.BookService o-- com.snowlinesoftware.blog.optionalvalues.BookRepository : bookRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
